--- a/Chalkable.BusinessLogic/Chalkable.BusinessLogic.csproj
+++ b/Chalkable.BusinessLogic/Chalkable.BusinessLogic.csproj
@@ -138,6 +138,7 @@
     <Compile Include="Services\DemoSchool\DemoGradingStatisticService.cs" />
     <Compile Include="Services\DemoSchool\DemoInfractionService.cs" />
     <Compile Include="Services\DemoSchool\DemoGradingCommentService.cs" />
+    <Compile Include="Services\DemoSchool\DemoUserSchoolService.cs" />
     <Compile Include="Services\DemoSchool\Master\DemoBackgroundTaskService.cs" />
     <Compile Include="Services\DemoSchool\Master\DemoApplicationUploadService.cs" />
     <Compile Include="Services\DemoSchool\Master\DemoApplicationService.cs" />
@@ -314,6 +315,7 @@
     <Compile Include="Services\School\StudentParentService.cs" />
     <Compile Include="Services\School\StudentService.cs" />
     <Compile Include="Services\School\SyncService.cs" />
+    <Compile Include="Services\School\UserSchoolService.cs" />
     <Compile Include="Services\StorageBlobService.cs" />
     <Compile Include="Services\UserContext.cs" />
     <Compile Include="Services\ServiceLocator.cs" />
