--- a/Chalkable.BackgroundTaskProducer/Chalkable.BackgroundTaskProducer.csproj
+++ b/Chalkable.BackgroundTaskProducer/Chalkable.BackgroundTaskProducer.csproj
@@ -93,6 +93,7 @@
     <Compile Include="ProducerConfigSection.cs" />
     <Compile Include="Producers\AllDistrictsProducer.cs" />
     <Compile Include="Producers\CleanupManager.cs" />
+    <Compile Include="Producers\DbBackupProducer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Producers\TaskProducer.cs" />
     <Compile Include="WorkerRole.cs" />
