--- a/Chalkable.BackgroundTaskProducer/app.qa.config
+++ b/Chalkable.BackgroundTaskProducer/app.qa.config
@@ -9,6 +9,7 @@
     <section name="TeacherAttendanceNotification" type="Chalkable.BackgroundTaskProducer.ProducerConfigSection, Chalkable.BackgroundTaskProducer"/>
     <section name="SisImportProducer" type="Chalkable.BackgroundTaskProducer.ProducerConfigSection, Chalkable.BackgroundTaskProducer"/>
     <section name="CleanupManager" type="Chalkable.BackgroundTaskProducer.ProducerConfigSection, Chalkable.BackgroundTaskProducer" />
+    <section name="DbBackupProducer" type="Chalkable.BackgroundTaskProducer.ProducerConfigSection, Chalkable.BackgroundTaskProducer" />
     <section name="RaygunSettings" type="Mindscape.Raygun4Net.RaygunSettings, Mindscape.Raygun4Net"/>
   </configSections>
   <system.diagnostics>
@@ -45,4 +46,5 @@
   <TeacherAttendanceNotification interval="1200" intervalStart="0" intervalEnd="86400"/>
   <SisImportProducer interval="120" intervalStart="0" intervalEnd="86400"/>
   <CleanupManager interval="600" intervalStart="0" intervalEnd="86400" />
+  <DbBackupProducer interval="43200" intervalStart="0" intervalEnd="86400" />
 </configuration>
