Added domain ensure

--- a/Chalkable.Web/Web.config
+++ b/Chalkable.Web/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
+    <add key="Domain" value="" />
     <add key="ScriptsRoot" value="https://127.0.0.1:444/" />
     <add key="ScriptsRootIncludeVersion" value="false" />
     <!--<add key="ScriptsRoot" value="https://az374501.vo.msecnd.net/static-"/>-->
