moved configuration to RoleEnv

--- a/Chalkable.Tests/app.config
+++ b/Chalkable.Tests/app.config
@@ -20,10 +20,10 @@
   </startup>
 
   <ChalkableConfiguration SchoolTemplateDataBase="ChalkableSchoolTemplateTest" EmptySchoolsReserved="10">
-    <Servers>
+    <ChalkableSchoolDbServers>
       <!--<add key="DbServer1" value="wcc87p1bed.database.windows.net" />-->
       <add key="DbServer1" value="YURAN-PC\YURAXP" />
-    </Servers>
+    </ChalkableSchoolDbServers>
   </ChalkableConfiguration>
 
   <runtime>
