--- a/Chalkable.BackgroundTaskProcessor/Chalkable.BackgroundTaskProcessor.csproj
+++ b/Chalkable.BackgroundTaskProcessor/Chalkable.BackgroundTaskProcessor.csproj
@@ -97,6 +97,7 @@
     <Compile Include="BackupTaskHandler.cs" />
     <Compile Include="DatabaseUpdateTaskHandler.cs" />
     <Compile Include="ITaskHandler.cs" />
+    <Compile Include="PictureImportTaskHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SisImportDataTaskHandler.cs" />
     <Compile Include="TaskProcessor.cs" />
