fixed settings for mixpanel

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -5,6 +5,8 @@
   <repository path="..\Chalkable.BusinessLogic\packages.config" />
   <repository path="..\Chalkable.Data.Common\packages.config" />
   <repository path="..\Chalkable.Data.School\packages.config" />
+  <repository path="..\Chalkable.Data.School\packages.config" />
+  <repository path="..\Chalkable.MixPanel\packages.config" />
   <repository path="..\Chalkable.MixPanel\packages.config" />
   <repository path="..\Chalkable.StiConnector\packages.config" />
   <repository path="..\Chalkable.Tests\packages.config" />
