--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -11,6 +11,8 @@
   <repository path="..\Chalkable.MixPanel\packages.config" />
   <repository path="..\Chalkable.Data.Master\packages.config" />
   <repository path="..\Chalkable.Data.School\packages.config" />
+  <repository path="..\Chalkable.Data.School\packages.config" />
+  <repository path="..\Chalkable.MixPanel\packages.config" />
   <repository path="..\Chalkable.MixPanel\packages.config" />
   <repository path="..\Chalkable.StiConnector\packages.config" />
   <repository path="..\Chalkable.StiImport\packages.config" />
