--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -4,9 +4,11 @@
   <repository path="..\Chalkable.BackgroundTaskProducer\packages.config" />
   <repository path="..\Chalkable.BusinessLogic\packages.config" />
   <repository path="..\Chalkable.Data.Common\packages.config" />
+  <repository path="..\Chalkable.Data.Master\packages.config" />
   <repository path="..\Chalkable.Data.School\packages.config" />
   <repository path="..\Chalkable.Data.School\packages.config" />
   <repository path="..\Chalkable.Data.School\packages.config" />
+  <repository path="..\Chalkable.MixPanel\packages.config" />
   <repository path="..\Chalkable.MixPanel\packages.config" />
   <repository path="..\Chalkable.MixPanel\packages.config" />
   <repository path="..\Chalkable.MixPanel\packages.config" />
