--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -11,6 +11,7 @@
   <repository path="..\Chalkable.Data.School\packages.config" />
   <repository path="..\Chalkable.MixPanel\packages.config" />
   <repository path="..\Chalkable.MixPanel\packages.config" />
+  <repository path="..\Chalkable.MixPanel\packages.config" />
   <repository path="..\Chalkable.Data.Master\packages.config" />
   <repository path="..\Chalkable.Data.School\packages.config" />
   <repository path="..\Chalkable.Data.School\packages.config" />
