--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -7,6 +7,9 @@
   <repository path="..\Chalkable.Common\packages.config" />
   <repository path="..\Chalkable.Data.Common\packages.config" />
   <repository path="..\Chalkable.Data.Master\packages.config" />
+  <repository path="..\Chalkable.Data.Master\packages.config" />
+  <repository path="..\Chalkable.Data.School\packages.config" />
+  <repository path="..\Chalkable.Data.School\packages.config" />
   <repository path="..\Chalkable.Data.School\packages.config" />
   <repository path="..\Chalkable.Data.School\packages.config" />
   <repository path="..\Chalkable.MixPanel\packages.config" />
