--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -8,6 +8,9 @@
   <repository path="..\Chalkable.Data.Common\packages.config" />
   <repository path="..\Chalkable.Data.Master\packages.config" />
   <repository path="..\Chalkable.Data.Master\packages.config" />
+  <repository path="..\Chalkable.Data.Master\packages.config" />
+  <repository path="..\Chalkable.Data.School\packages.config" />
+  <repository path="..\Chalkable.Data.School\packages.config" />
   <repository path="..\Chalkable.Data.School\packages.config" />
   <repository path="..\Chalkable.Data.School\packages.config" />
   <repository path="..\Chalkable.Data.School\packages.config" />
