--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -9,6 +9,12 @@
   <repository path="..\Chalkable.Data.Master\packages.config" />
   <repository path="..\Chalkable.Data.Master\packages.config" />
   <repository path="..\Chalkable.Data.Master\packages.config" />
+  <repository path="..\Chalkable.Data.Master\packages.config" />
+  <repository path="..\Chalkable.Data.Master\packages.config" />
+  <repository path="..\Chalkable.Data.School\packages.config" />
+  <repository path="..\Chalkable.Data.School\packages.config" />
+  <repository path="..\Chalkable.Data.School\packages.config" />
+  <repository path="..\Chalkable.Data.School\packages.config" />
   <repository path="..\Chalkable.Data.School\packages.config" />
   <repository path="..\Chalkable.Data.School\packages.config" />
   <repository path="..\Chalkable.Data.School\packages.config" />
