--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -11,28 +11,29 @@
   <repository path="..\Chalkable.Data.Master\packages.config" />
   <repository path="..\Chalkable.Data.Master\packages.config" />
   <repository path="..\Chalkable.Data.Master\packages.config" />
-  <repository path="..\Chalkable.Data.School\packages.config" />
-  <repository path="..\Chalkable.Data.School\packages.config" />
-  <repository path="..\Chalkable.Data.School\packages.config" />
-  <repository path="..\Chalkable.Data.School\packages.config" />
-  <repository path="..\Chalkable.Data.School\packages.config" />
-  <repository path="..\Chalkable.Data.School\packages.config" />
-  <repository path="..\Chalkable.Data.School\packages.config" />
-  <repository path="..\Chalkable.Data.School\packages.config" />
-  <repository path="..\Chalkable.Data.School\packages.config" />
-  <repository path="..\Chalkable.Data.School\packages.config" />
-  <repository path="..\Chalkable.MixPanel\packages.config" />
-  <repository path="..\Chalkable.MixPanel\packages.config" />
-  <repository path="..\Chalkable.MixPanel\packages.config" />
   <repository path="..\Chalkable.Data.Master\packages.config" />
   <repository path="..\Chalkable.Data.School\packages.config" />
   <repository path="..\Chalkable.Data.School\packages.config" />
+  <repository path="..\Chalkable.Data.School\packages.config" />
+  <repository path="..\Chalkable.Data.School\packages.config" />
+  <repository path="..\Chalkable.Data.School\packages.config" />
+  <repository path="..\Chalkable.Data.School\packages.config" />
+  <repository path="..\Chalkable.Data.School\packages.config" />
+  <repository path="..\Chalkable.Data.School\packages.config" />
+  <repository path="..\Chalkable.Data.School\packages.config" />
+  <repository path="..\Chalkable.Data.School\packages.config" />
+  <repository path="..\Chalkable.Data.School\packages.config" />
+  <repository path="..\Chalkable.Data.School\packages.config" />
+  <repository path="..\Chalkable.MixPanel\packages.config" />
+  <repository path="..\Chalkable.MixPanel\packages.config" />
+  <repository path="..\Chalkable.MixPanel\packages.config" />
   <repository path="..\Chalkable.MixPanel\packages.config" />
   <repository path="..\Chalkable.MixPanel\packages.config" />
   <repository path="..\Chalkable.StiConnector\packages.config" />
   <repository path="..\Chalkable.StiImport\packages.config" />
   <repository path="..\Chalkable.StiImport\packages.config" />
   <repository path="..\Chalkable.Tests\packages.config" />
+  <repository path="..\Chalkable.UserTracking\packages.config" />
   <repository path="..\Chalkable.Web\packages.config" />
   <repository path="..\FluentACS\packages.config" />
   <repository path="..\GCObjectRenderer\packages.config" />
