fix for CHLK-3274: forced return of 500 and 404 as is customErros are now RemoteOnly

--- a/Chalkable.Web/Web.config
+++ b/Chalkable.Web/Web.config
@@ -52,7 +52,7 @@
       </namespaces>
     </pages>
     <membership defaultProvider="ChalkableMembershipProvider" userIsOnlineTimeWindow="15"></membership>
-    <customErrors mode="Off"></customErrors>
+    <customErrors mode="RemoteOnly"/>
     <authentication mode="Forms">
       <forms loginUrl="~/User/LogOn" timeout="2880" />
     </authentication>
@@ -61,6 +61,8 @@
   <system.webServer>
     <urlCompression doStaticCompression="true" doDynamicCompression="true" dynamicCompressionBeforeCache="true" />
     <modules runAllManagedModulesForAllRequests="true" />
+    <!-- force return of 500 and 404 as is -->
+    <httpErrors existingResponse="PassThrough" />
     <!--<validation validateIntegratedModeConfiguration="false" />-->
     <handlers>
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" />
