--- a/Chalkable.Data.Master/Chalkable.Data.Master.csproj
+++ b/Chalkable.Data.Master/Chalkable.Data.Master.csproj
@@ -64,6 +64,7 @@
     <Compile Include="DataAccess\ApplicationRatingDataAccess.cs" />
     <Compile Include="DataAccess\BackgroundTaskDataAccess.cs" />
     <Compile Include="DataAccess\CategoryDataAccess.cs" />
+    <Compile Include="DataAccess\CC_StandardCategoryDataAccess.cs" />
     <Compile Include="DataAccess\ChalkableDepartmentDataAccess.cs" />
     <Compile Include="DataAccess\CommonCoreStandardDataAccess.cs" />
     <Compile Include="DataAccess\DeveloperDataAccess.cs" />
@@ -77,6 +78,7 @@
     <Compile Include="Model\Application.cs" />
     <Compile Include="Model\BackgroundTask.cs" />
     <Compile Include="Model\ChalkableDepartment.cs" />
+    <Compile Include="Model\CommonCoreStandard.cs" />
     <Compile Include="Model\DatabaseBackupRestoreTaskData.cs" />
     <Compile Include="Model\DatabaseUpdateTaskData.cs" />
     <Compile Include="Model\District.cs" />
