--- a/Chalkable.Data.School/Chalkable.Data.School.csproj
+++ b/Chalkable.Data.School/Chalkable.Data.School.csproj
@@ -73,6 +73,7 @@
     <Compile Include="DataAccess\AnnouncementsDataAccess\AnnouncementForTeacherDataAccess.cs" />
     <Compile Include="DataAccess\ApplicationInstallDataAccess.cs" />
     <Compile Include="DataAccess\AttendanceReasonDataAccess.cs" />
+    <Compile Include="DataAccess\BellScheduleDataAccess.cs" />
     <Compile Include="DataAccess\ClassDisciplineDataAccess.cs" />
     <Compile Include="DataAccess\ClassroomOptionDataAccess.cs" />
     <Compile Include="DataAccess\ClassTeacherDataAccess.cs" />
@@ -130,6 +131,7 @@
     <Compile Include="Model\ApplicationInstall\ApplicationInstallActionGradeLevel.cs" />
     <Compile Include="Model\ApplicationInstall\ApplicationInstallActionRole.cs" />
     <Compile Include="Model\AttendanceReason.cs" />
+    <Compile Include="Model\BellSchedule.cs" />
     <Compile Include="Model\Class.cs" />
     <Compile Include="Model\ClassAnnouncementType.cs" />
     <Compile Include="Model\ClassDiscipline.cs" />
