--- a/Chalkable.BusinessLogic/Chalkable.BusinessLogic.csproj
+++ b/Chalkable.BusinessLogic/Chalkable.BusinessLogic.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Services\DemoSchool\Storage\BaseDemoGuidStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\DemoPersonBalanceStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\DemoPersonEmailStorage.cs" />
+    <Compile Include="Services\DemoSchool\Storage\DemoScheduledTimeSlotStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\DemoStaffSchoolStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\DemoStaffStorage.cs" />
     <Compile Include="Services\DemoSchool\Storage\DemoStudentSchoolStorage.cs" />
