--- a/Chalkable.StiConnector/Chalkable.StiConnector.csproj
+++ b/Chalkable.StiConnector/Chalkable.StiConnector.csproj
@@ -117,7 +117,9 @@
     <Compile Include="Connectors\Model\ActivityStandard.cs" />
     <Compile Include="Connectors\Model\AverageDashboard.cs" />
     <Compile Include="Connectors\Model\ClassroomOption.cs" />
+    <Compile Include="Connectors\Model\ComprehensiveProgressParams.cs" />
     <Compile Include="Connectors\Model\DisciplineReferral.cs" />
+    <Compile Include="Connectors\Model\MissingAssignmentsParams.cs" />
     <Compile Include="Connectors\Model\StudentExplorerDashboard.cs" />
     <Compile Include="Connectors\Model\Gradebook.cs" />
     <Compile Include="Connectors\Model\GradebookReportParams.cs" />
