added ComprehensiveProgressReport and MissingAssigmentsReport on server side

--- a/Chalkable.Web/Chalkable.Web.csproj
+++ b/Chalkable.Web/Chalkable.Web.csproj
@@ -201,6 +201,7 @@
     <Compile Include="Controllers\FeedController.cs" />
     <Compile Include="Controllers\FundController.cs" />
     <Compile Include="Controllers\GradingController.cs" />
+    <Compile Include="Controllers\GradingPeriodController.cs" />
     <Compile Include="Controllers\NotificationController.cs" />
     <Compile Include="Controllers\PeriodController.cs" />
     <Compile Include="Controllers\GradingStyleController.cs" />
